--- a/파이공방/계획.md
+++ b/파이공방/계획.md
@@ -3,6 +3,27 @@
 >파이썬 기초 과정으로 파이썬 기본 개념과 문법을 익히는 것을 목표로 합니다.
 >소요일정은 4주가 소요될 예정이고, 소모임 진행은 주차별 내용을 튜터가 설명하고 수강하는 방식입니다.
 ## 일정
-* 소모임 인원모집: 2/5~2/12(최대: 5명, 인원 미달시 1주 연장)
-* 
+* 인원모집: 2/17~2/21(최대: 7명, 인원 미달시 1주 연장)
+* 오리엔테이션: 2/27
+* 1주차: 3/2~3/6
+* 2주차: 3/9~3/13
+* 3주차: 3/16~3/20
+* 4주차: 3/23~3/27
+## 장소
 ## Contents
+* 1주차
+    * 파이썬 프로그래밍 소개
+    * 기본 데이터 타입
+    * 컨테이너 데이터 타입
+    * 식별자와 예약어
+* 2주차
+    * 연산자
+    * 흐름 제어
+    * 함수
+* 3주차
+    * 객체지향 프로그래밍
+    * 특별 메서드
+* 4주차
+    * 표준 모듈
+    * 파일 입출력
+    * 예외 처리
