--- a/파이공방/계획.md
+++ b/파이공방/계획.md
@@ -28,3 +28,7 @@
     * 표준 모듈
     * 파일 입출력
     * 예외 처리
+## Reference
+* 창의적 사고를 위한 Python 프로그래밍 정복하기(강남오.김재호 지음, 북스홀릭)
+* 처음 시작하는 파이썬(빌 루바노빅 지음/최길우 옮김, 한빛미디어)
+* 전문가를 위한 파이썬(루시아누 하말류 지음/강권학 옮김, 한빛미디어)
