--- a/파이공방/1주차/1_파이썬 _프로그래밍_소개.md
+++ b/파이공방/1주차/1_파이썬 _프로그래밍_소개.md
@@ -1,6 +1,50 @@
 # 파이썬 프로그래밍 소개
 ## 파이썬 언어
+* 코드 가독성에 중점(이해하기 쉽다, 고급 프로그래밍 언어)
+* 적은 코드로도 자신의 생각을 표현
 ## 역사
+* 귀도 반 로섬 창시(네덜란드 프로그래머)
+* 파이썬 1.0(1994년 1월, 생각보다 오래됨)
 ## 특징
+* 인터프리터 방식의 언어
+    * 작성된 프로그램 코드를 인터프리터가 한 줄씩 실행하는 방식의 언어
+* 고급 프로그래밍 언어
+* 객체지향 지원
+    * 모듈화
+    * 재사용성
+    * 유지보수 용이성
+    * 생산성 향상
+* 독립적인 실행 환경 제공
+    * 운영체제 및 플랫폼 관계없이 동일한 코드로 실행
+    * 이식성 높음
 ## 개발 환경 
+1. 파이썬 설치
+    * 다운로드: [https://www.python.org/downloads/](https://www.python.org/downloads/)
+1. pycharm 설치
+    * 다운로드: [https://www.jetbrains.com/ko-kr/pycharm/download/](https://www.jetbrains.com/ko-kr/pycharm/download/)
+        * Community 버전
+1. 환경 설정
+    1. pycharm 실행
+    1. Project 생성
+        * File > New Project
+    1. Location 설정
+    1. Project Interpreter 설정
+        * 설치된 파이썬 선택
 ## 인터프리터 사용하기
+* 방법 1
+    1. New > Python File
+    1. 파일명 입력
+        > hello
+    1. 코드 입력
+    ```
+    # _*_ coding: utf-8 _*_
+    print('hello')
+    ```
+    1. 코드 실행
+        * Ctrl+Shift+F10
+* 방법 2
+    1. PythonConsole 실행(pycharm 하단에 위치)
+    1. 코드 실행
+    ```
+    print('hello')
+    ```
