--- a/파이공방/1주차/2_기본_데이터_타입.md
+++ b/파이공방/1주차/2_기본_데이터_타입.md
@@ -1,1 +1,57 @@
 # 기본 데이터 타입
+* 기본 데이터 타입 or 내장(built-in) 타입으로 불림
+## 데이터 타입 소개
+* 파이썬 언어에서 기본적으로 제공하는 데이터 타입
+* 파이썬 인터프리터 내부에 이미 구축 된 혹은 파이썬 인터프리터 실행과 함께 바로 사용할 수 있는 데이터 타입
+## 정수(int) 타입
+* 다양한 정수 표현
+* 큰 정수 표현 처리 가능(컴퓨터 메모리가 허용하는 한 만큼의 큰 정수를 표현 처리 가능)
+* 2진법, 8진법, 16진법으로 정수 표현하는 방법
+    * 2진법
+        * 0b로 시작하고 0과 1로 표현
+        ```
+        0b1010
+        0b1110111
+        0b10101010
+        ```
+    * 8진법
+        * 0o로 시작하고 0~7로 표현
+        ```
+        0o1357
+        0o123
+        0o345
+        ```
+    * 16진법
+        * 0x로 시작하고 0~9,a~f(A~F)로 표현
+        ```
+        0x123
+        0x12abc
+        0x5acdc
+        ```
+## 실수(float) 타입
+* 실수는 3.14, 1.0, 1.23 등 소수점을 포함하는 수
+```
+>>> 3.14
+3.14
+>>> 2 * 3.14 * 5
+31.400000000000002
+```
+* 가수와 지수를 이용한 표현
+```
+# 가수e지수 or 가수E지수
+>>> 3.1415e2
+314.15
+>>> 2.7182E2
+271.82
+>>> 3.1415e2 + 271.82
+585.97
+```
+## 복소수(complex) 타입
+## 불린(boolean) 타입
+## 문자열(str) 타입
+## 리스트(list) 타입
+## 튜블(tuple) 타입
+## 사전(dict) 타입
+## 집합(set) 타입
+## None 타입
+## 타입 변환
