--- a/파이공방/1주차/2_기본_데이터_타입.md
+++ b/파이공방/1주차/2_기본_데이터_타입.md
@@ -46,8 +46,24 @@
 >>> 3.1415e2 + 271.82
 585.97
 ```
-## 복소수(complex) 타입
 ## 불린(boolean) 타입
+* True 와 False 두 개의 boolean 형 데이터 제공
+```
+>>> True
+True
+>>> False
+False
+>>> True and True
+True
+>>> True and False
+False
+>>> True or True
+True
+>>> True or False
+True
+>>> False or False
+False
+```
 ## 문자열(str) 타입
 ## 리스트(list) 타입
 ## 튜블(tuple) 타입
