--- a/파이공방/1주차/2_기본_데이터_타입.md
+++ b/파이공방/1주차/2_기본_데이터_타입.md
@@ -65,6 +65,46 @@ True
 False
 ```
 ## 문자열(str) 타입
+* 단일 인용부호(') or 이중 인용부호(") or 인용부호를 세개 연속(''' or """) 사용하여 문자열 양쪽을 감싸 표현
+```
+>>> 'hello'
+>>> "hello"
+>>> '''hello'''
+>>> """hello"""
+```
+* 문자열 내 인용부호 포함
+```
+>>> 'He shouted "help me!"'
+>>> "He doesn't like it."
+```
+* 여러 줄 문자열 표현
+```
+>>> '''Hello World!
+Hello Korea!
+안녕 파이썬!
+'''
+>>> """Hello World!
+Hello Korea!
+안녕 파이썬!
+"""
+```
+* 문자열 내 이스케이프(escape) 문자 사용
+    * **\n: 줄바꿈(개행)**
+    * \v: 수직 탭(tab)
+    * **\t: 수평 탭(tab)**
+    * \r: 캐리지 리턴
+    * \f: 폼피드
+    * \a: 비프음
+    * \b: 백스페이스
+    * \000: Null 문자
+    * **\\\\: '\' 문자**
+    * **\': 단일 인용부호(')**
+    * **\": 이중 인용부호(")**
+```
+>>> "He shouted \"Help me!\""
+>>> 'He doesn\'t like it'
+>>> """Hello World!\nHello Korea!\n안녕 파이썬!"""
+```
 ## 리스트(list) 타입
 ## 튜블(tuple) 타입
 ## 사전(dict) 타입
