--- a/파이공방/1주차/2_기본_데이터_타입.md
+++ b/파이공방/1주차/2_기본_데이터_타입.md
@@ -106,6 +106,36 @@ Hello Korea!
 >>> """Hello World!\nHello Korea!\n안녕 파이썬!"""
 ```
 ## 리스트(list) 타입
+* 다양한 데이터 타입들을 주어진 순서에 따라 저장할 수 있는 데이터 타입
+* 꺽쇠 괄호([]) 안에 데이터들을 넣어 생성
+```
+>>> [1, 3.14, True, "Hello World"]
+>>> [1, 2, [1, 2], ["Hello World", True]]
+>>> a = []
+>>> a.append(1)
+>>> b = list()
+>>> b.append([1, 2])
+```
+* 인덱스(index) 값으로 요소 가져오기
+```
+>>> [1, 3.14, True, "Hello World"][0]
+1
+>>> a = [1, 3.14, True, "Hello World"]
+>>> a[0]
+1
+>>> a[-1]
+'Hello World'
+>>> a[-2]
+True
+```
+* len(): 리스트 크기
+```
+>>> a = [1, 3.14, True, "Hello World"]
+>>> len(a)
+4
+>>> a.__len__()
+4
+```
 ## 튜블(tuple) 타입
 ## 사전(dict) 타입
 ## 집합(set) 타입
