--- a/파이공방/1주차/2_기본_데이터_타입.md
+++ b/파이공방/1주차/2_기본_데이터_타입.md
@@ -107,6 +107,7 @@ Hello Korea!
 ```
 ## 리스트(list) 타입
 * 다양한 데이터 타입들을 주어진 순서에 따라 저장할 수 있는 데이터 타입
+* mutable
 * 꺽쇠 괄호([]) 안에 데이터들을 넣어 생성
 ```
 >>> [1, 3.14, True, "Hello World"]
@@ -136,7 +137,56 @@ True
 >>> a.__len__()
 4
 ```
-## 튜블(tuple) 타입
+## 튜플(tuple) 타입
+* 다양한 데이터 타입들을 주어진 순서에 따라 저장할 수 있는 데이터 타입
+* immutable(생성 후 내용 변경 불가)
+* 리스트에 비해 성능 좋
+* 괄호(())안에 데이터들을 넣어 생성
+```
+>>> (1, 3.14, True, "Hello World")
+(1, 3.14, True, 'Hello World')
+>>> (1, 2, (1, 2), (True, "Hello World"))
+(1, 2, (1, 2), (True, 'Hello World'))
+```
+* 인덱스(index) 값으로 요소 가져오기
+```
+>>> (1, 3.14, True, "Hello World")[0]
+1
+>>> a = (1, 3.14, True, "Hello World")
+>>> a[0]
+1
+>>> a[-1]
+'Hello World'
+>>> a[-2]
+True
+```
+* 팩킹(packing)
+    * 콤마(,)로 분리된 데이터 값들은 튜플로 인식됨
+    ```
+    >>> 1,2,3
+    (1, 2, 3)
+    >>> 1, "Hello World", True
+    (1, 'Hello World', True)
+    ```
+* 언팩킹(unpacking)
+    * 대입 연산자(=)의 우변에 튜플이 오고 좌변에 튜플의 요소만큼 변수가 오면 튜플의 각 요소는 좌변의 변수에 각각 반환
+    ```
+    >>> x, y, z = (1, 2, 3)
+    >>> x
+    1
+    >>> y
+    2
+    >>> z
+    3
+    ```
+* 팩킹, 언팩킹 사용예
+    * 변수 값 교환의 표현을 간결, 명확하게 표
+    ```
+    >>> x, y = (3,4)
+    >>> y, x = x, y
+    >>> print(x, y)
+    4 3
+    ```
 ## 사전(dict) 타입
 ## 집합(set) 타입
 ## None 타입
