--- a/파이공방/1주차/2_기본_데이터_타입.md
+++ b/파이공방/1주차/2_기본_데이터_타입.md
@@ -140,7 +140,7 @@ True
 ## 튜플(tuple) 타입
 * 다양한 데이터 타입들을 주어진 순서에 따라 저장할 수 있는 데이터 타입
 * immutable(생성 후 내용 변경 불가)
-* 리스트에 비해 성능 좋
+* 리스트에 비해 성능 좋다
 * 괄호(())안에 데이터들을 넣어 생성
 ```
 >>> (1, 3.14, True, "Hello World")
@@ -188,6 +188,22 @@ True
     4 3
     ```
 ## 사전(dict) 타입
+* 순서화 되지 않은 키(key)-값(value)의 쌍으로 된 집합
+* 중괄호({}) 이용하여 생성
+```{key1: value1, key2: value2, ...}```
+```
+>>>  {1: "hello world", "인사": "안녕 파이썬!", "pi": 3.14}
+```
+* 키(key)에 의해 데이터 값 접근
+```
+>>> d = {1: "hello world", "인사": "안녕 파이썬!", "pi": 3.14}
+>>> d[1]
+'hello world'
+>>> d["인사"]
+'안녕 파이썬!'
+>>> d["pi"]
+3.14
+```
 ## 집합(set) 타입
 ## None 타입
 ## 타입 변환
