--- a/파이공방/1주차/2_기본_데이터_타입.md
+++ b/파이공방/1주차/2_기본_데이터_타입.md
@@ -205,5 +205,63 @@ True
 3.14
 ```
 ## 집합(set) 타입
+* 순서화 되지 않게 유일한 값을 담는 데이터 타입(중복값은 마자막 값만 저장)
+* 중괄호({}) 이용하여 생성
+```{value1, value2, value3, ...}```
+```
+>>>  {1, "hello world", 3.14}
+```
+* 집합 연산
+    * |: 합집합
+    * &: 교집합
+    * -: 차집합
+    * ^: 대칭 차집합
+    ```
+    >>> x = {2,3,2,3,4,5,1}
+    >>> y = {3,4,5,6,7}
+    >>> x|y
+    {1, 2, 3, 4, 5, 6, 7}
+    >>> x&y
+    {3, 4, 5}
+    >>> x-y
+    {1, 2}
+    >>> x^y
+    {1, 2, 6, 7}
+    >>> x = {1,"a",3.14}
+    >>> y = {2,"a","b"}
+    >>> x|y
+    {1, 'b', 3.14, 2, 'a'}
+    >>> x&y
+    {'a'}
+    >>> x-y
+    {1, 3.14}
+    >>> x^y
+    {'b', 2, 3.14, 1}
+    ```
 ## None 타입
+* 값이 없음
+* 변수가 가리키는 대상체의 존재를 확인 혹은 함수의 호출 후 반환되는 값이 있는지 확인할 경우 사용
+* None 이용
+```
+>>> x = None
+```
 ## 타입 변환
+* 타입 변환이 가능하면 타입 변환 허용
+```
+>>> float(1)
+1.0
+>>> int(3.14)
+3
+>>> str(3.14)
+'3.14'
+>>> float("3.14")
+3.14
+>>> float("a")
+Traceback (most recent call last):
+  File "<input>", line 1, in <module>
+ValueError: could not convert string to float: 'a'
+>>> tuple([1,2,3])
+(1, 2, 3)
+>>> list((1,2,3))
+[1, 2, 3]
+```
