--- a/파이공방/1주차/3_컨테이너_데이터_타입.md
+++ b/파이공방/1주차/3_컨테이너_데이터_타입.md
@@ -1,1 +1,18 @@
 # 컨테이너 데이터 타입
+> 여러 데이터를 포함 가능
+* 문자열
+* 리스트
+* 튜플
+* 집합
+* 사전
+## 순차 데이터 타입과 비순차 데이터 타입
+> 컨테이너 타입은 순차 타입과 비순차 타입으로 나뉜다.
+* 순차 타입
+    > 인덱스 값을 이용해서 각 데이터 요소를 접근할 수 있는 데이터 타입. 인덱스 시작 값은 0.
+* 비순차 타입
+## 가변(Mutable) 데이터 타입과 불편(Immutable) 데이터 타입
+## 인덱싱(Indexing)
+## 슬라이싱(Slicing)
+## 덧셈과 곱셈
+## 요소 확인
+## 추가 기능들
